# webserver_nicolas

./: Cargo.toml  about.html  data.json  hello.html  index.html  notfound.html  slowrequest.html  style.css  time.html  times.js
client/css/: style.css
client/html/: about.html  index.html  slowrequest.html  time.html
src/: lib.rs  main.rs
src/database/: mod.rs  work_day_struct.rs
src/handlers/: mod.rs
