[package]
name = "webserver_nicolas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.7.1", features = ["sync"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [] }
bson = "2.8.1"